# another-discord-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  user.json
src/: main.rs  user.json  user.json.example
src/commands/: commandcounter.rs  duel.rs  giveme.rs  handle.rs  help.rs  latency.rs  lockout.rs  math.rs  message.rs  mod.rs  ping.rs  rating.rs
src/core/: data.rs
src/utils/: message_creator.rs  mod.rs
