[package]
name = "codeforces-trainer-bot"
version = "0.1.0"
edition = "2021"
author = ["Bao Dang Nguyen, <proquadi66@gmail.com>"]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.7", features = ["json"] }
tracing = "0.1.23"
tracing-subscriber = "0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"

[dependencies.tokio]
version = "1.40.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "standard_framework", "rustls_backend", "collector"]
